updated a bunch of css and html stuff to reflect changes by heather.

--- a/OracleJETApplication/templates/home.tmpl.html
+++ b/OracleJETApplication/templates/home.tmpl.html
@@ -1,3 +1,11 @@
+<!-- small template -->
+<script type="text/html" id="sm_template">
+<div class="oj-row oj-cols-nopad">
+    <div id="homeNavList" class="oj-sm-12 oj-col app-header-mobile-nav-title">
+    </div>
+</div>
+</script>
+
 <!-- large template -->
 <script type="text/html" id="md_lg_xl_template">
     <div class="oj-md-12 oj-col homeWrapper">
