--- a/OracleJETApplication/templates/labor.tmpl.html
+++ b/OracleJETApplication/templates/labor.tmpl.html
@@ -1,7 +1,7 @@
 <!-- small template -->
 <script type="text/html" id="sm_template">
 <div class="oj-row oj-cols-nopad">
-    <div class="oj-sm-12 oj-col app-header-mobile-nav-title" data-bind="if: router.stateId(), click:toggleSections">
+    <div id="laborNavList" class="oj-sm-12 oj-col app-header-mobile-nav-title" data-bind="if: router.stateId(), click:toggleSections">
         <div data-bind="with: router.currentState()">
             <div class="mobileNavTitleArea">
                 <span class="oj-sm-11 oj-col" id="currentPage" data-bind="text: label"></span><span class="oj-sm-1 oj-col"><i class="fa fa-chevron-down"></i></span>
@@ -10,7 +10,7 @@
     </div>
     <div class="oj-row">
         <div class="oj-sm-12 oj-col" data-bind="visible: sectionsState">
-            <div id="tabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none'}">
+            <div id="laborTabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none'}">
                 <ul data-bind="foreach: navDataSource">
                     <li data-bind="attr: {id: id}, click: $parent.toggleSections">
                         <a data-bind="text: name"></a>
@@ -41,38 +41,39 @@
 
 <!-- large template -->
 <script type="text/html" id="md_lg_xl_template">
-    <div class="oj-md-12 oj-col laborWrapper">
-        <div id="laborSection" class="oj-col oj-md-12 page-header">
-            <h1>
-<!--                <span data-bind="css: pageHeadingIconClass"></span>-->
-                <span data-bind="text: pageHeading"></span>
-            </h1>
-<!--            <span class="page-sub-navigation">
-                <span data-bind="text: pageSubNavigation"></span>
-                <a data-bind="click: handleOpen()">change</a>
-            </span>-->
-        </div>
+    <div class="oj-flex-wrap">
+        <div class="oj-md-12 oj-col laborWrapper">
+            <div id="laborSection" class="oj-md-12 page-header">
+                <h1>
+    <!--                <span data-bind="css: pageHeadingIconClass"></span>-->
+                    <span data-bind="text: pageHeading"></span>
+                </h1>
+    <!--            <span class="page-sub-navigation">
+                    <span data-bind="text: pageSubNavigation"></span>
+                    <a data-bind="click: handleOpen()">change</a>
+                </span>-->
+            </div>
 
-        <div id="laborSectionTabs" class="oj-md-12 oj-col">
-            <div data-bind="ojComponent: {component: 'ojConveyorBelt'}">  
-                <div id="labortabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none', edge: 'top'}">
-                    <ul data-bind="foreach: navDataSource">
+            <div id="laborSectionTabs" class="oj-md-12">
+                <div data-bind="ojComponent: {component: 'ojConveyorBelt'}">  
+                    <div id="laborTabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none', edge: 'top'}">
+                        <ul data-bind="foreach: navDataSource">
 
-                        <li id="id" data-bind="attr: {id: id}">
-                            <a data-bind="text: name"></a>
-                        </li>
+                            <li id="id" data-bind="attr: {id: id}">
+                                <a data-bind="text: name"></a>
+                            </li>
 
-                    </ul>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="oj-md-12 oj-col" data-bind="if: router.stateId()">
-        <div class="oj-panel tab-content" data-bind="with: router.currentState()">
-                <div data-bind="template: {name: 'labor/' + id +'/' + id + '-large'}"></div>
+        <div class="oj-md-12 oj-col" data-bind="if: router.stateId()">
+            <div class="oj-panel tab-content" data-bind="with: router.currentState()">
+                    <div data-bind="template: {name: 'labor/' + id +'/' + id + '-large'}"></div>
+            </div>
         </div>
     </div>
-
 </script>
 
 <div data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
