--- a/OracleJETApplication/templates/enterprise.tmpl.html
+++ b/OracleJETApplication/templates/enterprise.tmpl.html
@@ -1,20 +1,7 @@
 <!-- small template -->
 <script type="text/html" id="sm_template">
-<!--
-     <div class="oj-col oj-md-12 oj-lg-12 oj-xl-12 page-header">
-        <h1>
-            <span data-bind="css: pageHeadingIconClass"></span>
-            <span data-bind="text: pageHeading"></span>
-        </h1>
-        <span class="page-sub-navigation">
-            <span data-bind="text: pageSubNavigation"></span>
-        <a href="#">change</a>
-        </span>
-    </div>
--->            
-
     <div class="oj-row oj-cols-nopad">
-        <div class="oj-sm-12 oj-col app-header-mobile-nav-title" data-bind="if: router.stateId(), click:toggleSections">
+        <div id="enterpriseNavList" class="oj-sm-12 oj-col app-header-mobile-nav-title" data-bind="if: router.stateId(), click:toggleSections">
             <div data-bind="with: router.currentState()">
                 <div class="mobileNavTitleArea">
                     <div id="currentPage"><span class="oj-sm-11 oj-col"><span data-bind="text: label"></span> <span data-bind="css: value"></span></span> <span class="oj-sm-1 oj-col"></span><i class="fa fa-chevron-down"></i></span></div>
@@ -23,7 +10,7 @@
         </div>
         <div class="oj-row">
             <div class="oj-sm-12 oj-col" data-bind="visible: sectionsState">
-                <div id="tabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none'}">
+                <div id="enterpriseTabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none'}">
                     <ul data-bind="foreach: router.states">
                         <li data-bind="attr: {id: id}, click: $parent.toggleSections">
                             <a data-bind="text: label"></a>
@@ -33,7 +20,7 @@
             </div>
             <div class="oj-sm-12 oj-col" data-bind="if: router.stateId()">
                 <div class="oj-panel tab-content" data-bind="with: router.currentState()">
-<!--                    <h2 id="currentPage" data-bind="text: label"></h2>-->
+    <!--                    <h2 id="currentPage" data-bind="text: label"></h2>-->
                     <div data-bind="template: {name: 'enterprise/' + id +'/' + id + '-small'}"></div>
                 </div>
             </div>
@@ -46,18 +33,14 @@
     <div class="oj-md-12 oj-col enterpriseWrapper">
         <div id="enterpriseSection" class="oj-col oj-md-12 page-header">
             <h1>
-<!--                <span data-bind="css: pageHeadingIconClass"></span>-->
                 <span data-bind="text: pageHeading"></span>
             </h1>
-    <!--        <span class="page-sub-navigation">
-                <span data-bind="text: pageSubNavigation"></span>
-            <a href="#">change</a>-->
+
             </span>
         </div>
-
-        <div id="enterpriseTabs" class="oj-md-12 oj-col">
+        <div id="enterpriseSectionTabs" class="oj-md-12 oj-col">
             <div data-bind="ojComponent: {component: 'ojConveyorBelt'}">  
-                <div id="tabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none', edge: 'top'}">
+                <div id="enterpriseTabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none', edge: 'top'}">
                     <ul data-bind="foreach: router.states">
                         <li data-bind="attr: {id: id}">
                             <a data-bind="text: label"></a>
