--- a/OracleJETApplication/templates/profile.tmpl.html
+++ b/OracleJETApplication/templates/profile.tmpl.html
@@ -1,11 +1,15 @@
 <!-- small template -->
 <script type="text/html" id="sm_template">
 <div class="oj-row oj-cols-nopad">    
-    <div class="oj-sm-12 oj-col app-header-mobile-nav-title" data-bind="if: tabRouter.stateId(), click:toggleSections">
+    <div id="profileNavList" class="oj-sm-12 oj-col app-header-mobile-nav-title" data-bind="if: tabRouter.stateId(), click:toggleSections">
         <div data-bind="with: tabRouter.currentState()">
             <div class="mobileNavTitleArea">
-                <span class="oj-sm-11 oj-col" id="currentPage" data-bind="text: label"></span>
-                <span data-bind="visible: id == 'schedules-timecards'"><a data-bind="click: function(){alert('Helllllllooooo');}"><i class="fa fa-question-circle"></i></a></span>
+                <span class="oj-sm-11 oj-col">
+                    <span id="currentPage" data-bind="text: label"></span>
+                    <span class="helpIcon" data-bind="visible: id == 'profile'"><a data-bind="click: function(){alert('Helllllllooooo'); return false;}"><i class="fa fa-question-circle"></i></a></span>
+                    <span class="helpIcon" data-bind="visible: id == 'schedules-timecards'"><a data-bind="click: function(){alert('Helllllllooooo');}"><i class="fa fa-question-circle"></i></a></span>
+                </span>
+                
                 <span class="oj-sm-1 oj-col"><i class="fa fa-chevron-down"></i></span>
                 
             </div>
@@ -34,30 +38,35 @@
     <div id="personaldetails" class="oj-row">
         <div class="oj-row">
             <div class="oj-sm-3 oj-col">
-                <span class="imageOverlay"></span>
-                <img id="empImg" style="width:75px; height:75px;" data-bind="attr: {src: getPhoto(personProfile().empId)}" />
+                <span class="imageOverlayProfile"></span>
+                <img id="empImg" style="width:80px; height:80px;" data-bind="attr: {src: getPhoto(personProfile().empId)}" />
             </div>
-            <div class="oj-sm-9 oj-col profileNameHeader">
+            <div class="oj-sm-9 oj-col profileNameArea">
                 <h2>
-                <span data-bind="text: firstName()"></span>
-                <span data-bind="text: lastName()"></span>
-                <a data-bind="click: handleOpen('#employeeLogModal')"><i class="profileHelpIcon fa fa-book"></i></a></h2>
+                    <span data-bind="text: firstName()"></span>
+                    <span data-bind="text: lastName()"></span>
+                    <a data-bind="click: handleOpen('#employeeLogModal')"><i class="profileHelpIcon fa fa-book"></i></a>
+                </h2>
+                 <div class="oj-sm-12 oj-col parentProfileStatusToolArea">
+                    <ul class="profileStatusToolArea">
+                        <li>
+                           <i class="fa fa-home"></i>
+                            <strong>Home Store</strong>
+                             <a data-bind="click: handleOpen('#homeStoreDialog')"><span data-bind="text: personProfile().homeStore"></span>                   
+                           <i class="fa fa-share"></i></a>
 
-                <ul class="profileStatusToolArea">
-                    <li>
-                        <h4>Home Store</h4>
-                        <span data-bind="text: personProfile().homeStore"></span>                   
-                        <a data-bind="click: handleOpen('#homeStoreDialog')">transfer <i class="fa fa-share"></i></a>
+                        <li>
+                            <i class="fa fa-user-plus"></i>
+                            <strong>Hire Status</strong>
+                            <a data-bind="click: handleOpen('#hireStatusDialog')"><span data-bind="text: personProfile().hireStatus"></span>
+                           <i class="fa fa-refresh"></i></a>
 
-                    <li>
-                        <h4>Hire Status</h4>
-                        <span data-bind="text: personProfile().hireStatus"></span>
-                        <a data-bind="click: handleOpen('#hireStatusDialog')">update <i class="fa fa-refresh"></i></a>
+                        </li>
+                    </ul>
 
-                    </li>
-                </ul>
-            
+                </div>
             </div>
+           
         </div>
 
 
