--- a/OracleJETApplication/templates/reports-analytics.tmpl.html
+++ b/OracleJETApplication/templates/reports-analytics.tmpl.html
@@ -1,23 +1,21 @@
-<div class="oj-md-12 oj-col reportsAnalyticsWrapper">
-        <div id="reports-AnalyticsSection" class="oj-col oj-md-12 page-header">
-      <h1>
-                 <!--     <span data-bind="css: pageHeadingIconClass"></span>-->
-                <span>Reports and Charts</span>
+<!-- small template -->
+<script type="text/html" id="sm_template">
+<div class="oj-row oj-cols-nopad">
+    <div id="reportAnalyticsNavList" class="oj-sm-12 oj-col app-header-mobile-nav-title">
+    </div>
+</div>
+</script>
+
+<!-- large template -->
+<script type="text/html" id="md_lg_xl_template">
+    <div class="oj-md-12 oj-col reportsAnalyticsWrapper">
+        <div id="reportAnalyticsSection" class="oj-col oj-med-12 oj-lg-12 oj-xl-12 page-header">
+            <h1>
+                <span data-bind="text: pageHeading"></span>
             </h1>
-<!--            <span class="page-sub-navigation">
-                <span data-bind="text: pageSubNavigation"></span>
-            <a href="#">change</a>
-            </span>-->
-        </div>
-        <div id="reports-AnalyticsSectionTabs" class="oj-md-12 oj-col">
-            <div data-bind="ojComponent: {component: 'ojConveyorBelt'}">  
-                <div id="tabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none', edge: 'top'}">
-                    <ul data-bind="foreach: router.states">
-                        <li id="id" data-bind="attr: {id: id}">
-                            <a data-bind="text: label"></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
         </div>
     </div>
+</script>
+
+
+<div data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
