added a top off canvas area

--- a/OracleJETApplication/templates/enterprise.tmpl.html
+++ b/OracleJETApplication/templates/enterprise.tmpl.html
@@ -52,7 +52,7 @@
     </div>
     <div class="oj-md-12 oj-col" data-bind="if: router.stateId()">
         <div class="oj-panel tab-content" data-bind="with: router.currentState()">
-            <h2 id="currentPage"><span data-bind="text: label"></span> <span data-bind="css: value"></span></h2>
+            <h2 id="currentPage"><span data-bind="text: label"></span></span></h2>
                 <div data-bind="template: {name: 'enterprise/' + id +'/' + id + '-large'}"></div>
         </div>
     </div>
