--- a/OracleJETApplication/templates/gift-loyalty/profile/profile-large.tmpl.html
+++ b/OracleJETApplication/templates/gift-loyalty/profile/profile-large.tmpl.html
@@ -1,3 +1,8 @@
 <div class="tbd">Content TBD
-     -large
+        <div data-bind="text: $parent.region"></div>
+        <div data-bind="text: $parent.locID"></div>
+        <div data-bind="text: $parent.storeName"></div>
+        
+                
+
 </div>
