--- a/OracleJETApplication/templates/inventory.tmpl.html
+++ b/OracleJETApplication/templates/inventory.tmpl.html
@@ -58,4 +58,4 @@
 
 </script>
 
-<div class="templateArea" data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
+<div id="templateWrapper" class="templateArea" data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
