--- a/OracleJETApplication/templates/reports-analytics.tmpl.html
+++ b/OracleJETApplication/templates/reports-analytics.tmpl.html
@@ -18,4 +18,4 @@
 </script>
 
 
-<div data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
+<div id="templateWrapper" data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
