--- a/OracleJETApplication/templates/gift-loyalty.tmpl.html
+++ b/OracleJETApplication/templates/gift-loyalty.tmpl.html
@@ -32,14 +32,13 @@
 <script type="text/html" id="md_lg_xl_template">
     <div class="oj-md-12 oj-col giftLoyaltyWrapper">
         <div id="giftLoyaltySection" class="oj-col oj-md-12 page-header">
+
             <h1>
     <!--            <span data-bind="css: pageHeadingIconClass"></span>-->
+
                 <span data-bind="text: pageHeading"></span>
             </h1>
-<!--            <span class="page-sub-navigation">
-                <span data-bind="text: pageSubNavigation"></span>
-            <a href="#">change</a>
-            </span>-->
+
         </div>
         <div id="giftLoyaltySectionTabs" class="oj-md-12 oj-col">
             <div data-bind="ojComponent: {component: 'ojConveyorBelt'}">  
@@ -55,6 +54,7 @@
     </div>
         <div class="oj-md-12 oj-col" data-bind="if: router.stateId()">
             <div class="oj-panel tab-content" data-bind="with: router.currentState()">
+
                 <h2 id="currentPage" data-bind="text: label"></h2>
                     <div data-bind="template: {name: 'gift-loyalty/' + id +'/' + id + '-large'}"></div>
             </div>
@@ -62,4 +62,4 @@
 
 </script>
 
-<div class="templateArea" data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
+<div id="templateWrapper" class="templateArea" data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
