--- a/OracleJETApplication/templates/home.tmpl.html
+++ b/OracleJETApplication/templates/home.tmpl.html
@@ -12,13 +12,17 @@
         <div id="homeSection" class="oj-col oj-med-12 oj-lg-12 oj-xl-12 page-header">
             <h1>
                 <span data-bind="text: pageHeading"></span>
+                <div id="city" data-bind="text: storeName"></div>
             </h1>
         </div>
+        <div data-bind="text: region"></div>
+        <div data-bind="text: locID"></div>
+        <div data-bind="text: cityName"></div>
+    </div>
+    <div>
+        
     </div>
 </script>
-<!-- small template -->
-<script type="text/html" id="sm_template">
 
-</script>
 
-<div data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
+<div id="templateWrapper" class="templateArea" data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
