--- a/OracleJETApplication/templates/inventory/overview/overview-large.tmpl.html
+++ b/OracleJETApplication/templates/inventory/overview/overview-large.tmpl.html
@@ -1,3 +1,6 @@
 <div class="tbd">Content TBD
      -large
+        <div data-bind="text: $parent.region"></div>
+        <div data-bind="text: $parent.locID"></div>
+        <div data-bind="text: $parent.storeName"></div>
 </div>
