--- a/OracleJETApplication/templates/labor.tmpl.html
+++ b/OracleJETApplication/templates/labor.tmpl.html
@@ -18,20 +18,12 @@
                 </ul>
             </div>
         </div>
-<!--        <div class="oj-col oj-md-12 oj-lg-12 oj-xl-12 page-header">
-            <span class="page-sub-navigation">
-                    <span data-bind="text: pageSubNavigation"></span>
-            <a data-bind="click: handleOpen">change</a>
-                          <button id="buttonOpener" data-bind="ojComponent: {component: 'ojButton', label: 'change'}, click: handleOpen"></button>
-            </span>
-        </div>-->
         <!-- dialog for change location  -->
         <div id="dialogWrapper">
             <div data-bind="template: {name: 'labor/schedules-timecards/changedialog'}"></div>
         </div>
         <div class="oj-sm-12 oj-col" data-bind="if: router.stateId()">
             <div class="oj-panel tab-content" data-bind="with: router.currentState()">
-                <!--                    <h2 id="currentPage" data-bind="text: label"></h2>-->
                 <div data-bind="template: {name: 'labor/' + id +'/' + id + '-small'}"></div>
             </div>
         </div>
@@ -41,42 +33,33 @@
 
 <!-- large template -->
 <script type="text/html" id="md_lg_xl_template">
-    <div class="oj-flex-wrap">
-        <div class="oj-md-12 oj-col laborWrapper">
-            <div id="laborSection" class="oj-md-12 page-header">
-                <h1>
-    <!--                <span data-bind="css: pageHeadingIconClass"></span>-->
-                    <span data-bind="text: pageHeading"></span>
-                </h1>
-    <!--            <span class="page-sub-navigation">
-                    <span data-bind="text: pageSubNavigation"></span>
-                    <a data-bind="click: handleOpen()">change</a>
-                </span>-->
-            </div>
-
-            <div id="laborSectionTabs" class="oj-md-12">
-                <div data-bind="ojComponent: {component: 'ojConveyorBelt'}">  
-                    <div id="laborTabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none', edge: 'top'}">
-                        <ul data-bind="foreach: navDataSource">
-
-                            <li id="id" data-bind="attr: {id: id}">
-                                <a data-bind="text: name"></a>
-                            </li>
-
-                        </ul>
-                    </div>
+    <div class="oj-md-12 oj-col laborWrapper">
+        <div id="laborSection" class="oj-md-12 page-header">
+            <h1>
+                <span data-bind="text: pageHeading"></span>
+            </h1>
+        </div>
+        <div id="laborSectionTabs" class="oj-md-12 oj-col">
+            <div data-bind="ojComponent: {component: 'ojConveyorBelt'}">  
+                <div id="laborTabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none', edge: 'top'}">
+                    <ul data-bind="foreach: navDataSource">
+                        <li id="id" data-bind="attr: {id: id}">
+                            <a data-bind="text: name"></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
-        <div class="oj-md-12 oj-col" data-bind="if: router.stateId()">
-            <div class="oj-panel tab-content" data-bind="with: router.currentState()">
-                    <div data-bind="template: {name: 'labor/' + id +'/' + id + '-large'}"></div>
-            </div>
+    </div>
+    <div id="laborTabWrapper" class="oj-md-12 oj-col" data-bind="if: router.stateId()">
+        <div class="oj-panel tab-content" data-bind="with: router.currentState()">
+                <div data-bind="template: {name: 'labor/' + id +'/' + id + '-large'}"></div>
         </div>
     </div>
+
 </script>
 
-<div data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
+<div id="templateWrapper" class="templateArea" data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
 <!-- dialog for change location  -->
 
  <div data-bind="template: {name: 'labor/dialogwindow/dialogwindow-large'}"></div>
