--- a/OracleJETApplication/templates/labor/overview/overview-large.tmpl.html
+++ b/OracleJETApplication/templates/labor/overview/overview-large.tmpl.html
@@ -1,5 +1,9 @@
 <div class="tbd">Content TBD
      -large
-     Hello
+     
+        <div data-bind="text: $parent.region"></div>
+        <div data-bind="text: $parent.locID"></div>
+        <div data-bind="text: $parent.storeName"></div>
+
 </div>
 
