--- a/OracleJETApplication/templates/people.tmpl.html
+++ b/OracleJETApplication/templates/people.tmpl.html
@@ -57,4 +57,4 @@
     </div>
 </script>
 
-<div class="templateArea"  data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
+<div id="templateWrapper" class="templateArea"  data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
